added minimal ui pages + auth token devise

--- a/backend/alerts_assignment/Gemfile
+++ b/backend/alerts_assignment/Gemfile
@@ -15,6 +15,12 @@ gem "pg", "~> 1.1"
 # CORS
 gem 'rack-cors'
 
+# auth
+gem 'devise'
+gem 'devise_token_auth', '>= 1.2.0', git: "https://github.com/lynndylanhurley/devise_token_auth"
+
+gem 'omniauth'
+
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.0"
 
